--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
             <h3>Curioso de internet</h3>
         </div>
         <div class="links">
-            <a href="">
-                <div>
-                    <img src="images/Linkedin.png" alt="Linkdin">
-                    <p>Linkedin</p>
-
-                </div>
+            <a href="https://www.linkedin.com/in/fernando-cunha-0809184/" target="_blank">
+                <img src="images/Linkedin.png" alt="Linkdin">
+                <p>Linkedin</p>
+                <div></div>
+            </a>
+            <a href="https://www.linkedin.com/in/fernando-cunha-0809184" target="_blank">
+                <img src="images/curriculum.png" alt="Curriculum">
+                <p>Curriculum</p>
+                <div></div>
+            </a>
+            <a href="https://www.instagram.com/fernandoocunha_" target="_blank">
+                <img src="images/instagram.png" alt="Instagram">
+                <p>Instagram</p>
+                <div></div>
             </a>
         </div>
 
